# decentralized_voting_arch

./: Cargo.toml  README.md
src/: main.rs
